--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,72 +6,6 @@
     android:layout_height="match_parent"
     android:background="@color/black">
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/button_area_upper"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.5" />
-
-    <View
-        android:id="@+id/button_render_area"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/button_area_upper" />
-
-    <View
-        android:id="@+id/button_area_delim"
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:background="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/button_area_upper"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/touch_area_upper"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.2" />
-
-    <View
-        android:id="@+id/touch_area"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:clickable="true"
-        android:focusable="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/touch_area_upper"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <TextView
-        android:id="@+id/text_info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:textColor="@color/white"
-        android:visibility="visible"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/touch_area_upper"
-        tools:text="TextView" />
-
-    <TextView
-        android:id="@+id/text_delay"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="12dp"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/expand_control" />
-
     <net.cachapa.expandablelayout.ExpandableLayout
         android:id="@+id/expand_control"
         android:layout_width="match_parent"
@@ -109,22 +43,6 @@
                 android:text="@string/card"
                 app:layout_constraintStart_toEndOf="@+id/button_coin"
                 app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/text_switch_air"
-                android:layout_width="90dp"
-                android:layout_height="0dp"
-                android:layout_marginStart="8dp"
-                android:background="#444444"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:gravity="center"
-                android:padding="8dp"
-                android:text="@string/disable_air"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@+id/button_card"
-                app:layout_constraintStart_toEndOf="@+id/button_card"
-                app:layout_constraintTop_toTopOf="@+id/button_card" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="195dp"
@@ -203,16 +121,6 @@
                 app:layout_constraintStart_toEndOf="@+id/button_service"
                 app:layout_constraintTop_toTopOf="@+id/button_service" />
 
-            <CheckBox
-                android:id="@+id/check_simple_air"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/simple_air"
-                android:textColor="@color/white"
-                app:layout_constraintBottom_toBottomOf="@+id/check_show_delay"
-                app:layout_constraintStart_toEndOf="@+id/check_show_delay"
-                app:layout_constraintTop_toTopOf="@+id/check_show_delay" />
-
             <TextView
                 android:id="@+id/text_mode"
                 android:layout_width="wrap_content"
@@ -227,19 +135,29 @@
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@+id/check_simple_air"
-                app:layout_constraintStart_toEndOf="@+id/check_simple_air"
-                app:layout_constraintTop_toTopOf="@+id/check_simple_air" />
+                app:layout_constraintBottom_toBottomOf="@+id/check_show_delay"
+                app:layout_constraintStart_toEndOf="@+id/check_show_delay"
+                app:layout_constraintTop_toTopOf="@+id/check_show_delay" />
+
+            <Button
+                android:id="@+id/button_flip_camera"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="Flip Camera"
+                app:layout_constraintBottom_toBottomOf="@+id/text_mode"
+                app:layout_constraintStart_toEndOf="@+id/text_mode"
+                app:layout_constraintTop_toTopOf="@+id/text_mode" />
 
             <Button
                 android:id="@+id/button_settings"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="8dp"
                 android:text="@string/settings"
-                app:layout_constraintBottom_toBottomOf="@+id/text_mode"
-                app:layout_constraintStart_toEndOf="@+id/text_mode"
-                app:layout_constraintTop_toTopOf="@+id/text_mode" />
+                app:layout_constraintBottom_toBottomOf="@+id/button_flip_camera"
+                app:layout_constraintStart_toEndOf="@+id/button_flip_camera"
+                app:layout_constraintTop_toTopOf="@+id/button_flip_camera" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </net.cachapa.expandablelayout.ExpandableLayout>
@@ -259,17 +177,46 @@
         app:layout_constraintTop_toBottomOf="@+id/expand_control" />
 
     <TextView
-        android:id="@+id/text_title"
+        android:id="@+id/text_delay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
-        android:background="@color/black"
-        android:text="@string/title"
         android:textColor="@color/white"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/expand_control" />
+
+    <TextView
+        android:id="@+id/text_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:textColor="@color/white"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_delay"
+        tools:text="TextView" />
+
+    <FrameLayout
+        android:id="@+id/camera_container"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/expand_control"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <androidx.camera.view.PreviewView
+            android:id="@+id/camera_preview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <View
+            android:id="@+id/zone_overlay"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
