--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -7,6 +7,11 @@
             android:defaultValue="true"
             android:key="enable_nfc"
             android:title="@string/enable_nfc" />
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:key="screen_dim_enabled"
+            android:title="Auto Screen Dim"
+            android:summary="Dims screen after 30 seconds to save battery" />
     </PreferenceCategory>
 
     <PreferenceCategory android:title="Camera Sensor Zones">
